Colab を使用して作成されました

--- a/DataAlgo2025_R03.ipynb
+++ b/DataAlgo2025_R03.ipynb
@@ -174,10 +174,10 @@
         "id": "mRLPlzcHmhiQ"
       },
       "source": [
-        "優先探索（Breadth-First Search; BFS）は、グラフの各頂点を「開始頂点からの距離（辺の本数）が小さい順」に訪問していく探索アルゴリズムである。以下の手順で実装する。\n",
+        "優先探索（Breadth-First Search; BFS）は、グラフの各頂点を「開始頂点からの距離（辺の本数）が小さい順」に訪問していく探索アルゴリズムである。\n",
         "\n",
         "1. 初期化\n",
-        "   - 開始頂点sを訪問済みとし、キュー（queue）の末尾（tail）に enqueue する。  \n",
+        "   - 開始頂点sを訪問済みとし、キューの末尾（tail）に追加する。  \n",
         "   - head, tail はそれぞれキューの先頭・末尾を指すインデックスとする。\n",
         "\n",
         "2. 探索ループ\n",
@@ -197,7 +197,7 @@
         "id": "E_IyfH8BmhvY"
       },
       "source": [
-        "（テキストセル2：この文字列を消してここにURLを記述）"
+        "https://youtube.com/shorts/Gyaa-BaSmsQ?feature=share"
       ]
     },
     {
@@ -220,7 +220,7 @@
         "id": "B9Z8A8xin-Ru"
       },
       "source": [
-        "（議論はここに記述）"
+        "頂点の数をNとした時、隣接行列表現では時間計算量と空間計算量はN^2となる。"
       ]
     },
     {
@@ -246,7 +246,7 @@
         "id": "ljT6EzOYnUZp"
       },
       "source": [
-        "（議論はここに記述）"
+        "N =頂点数とする。各頂点は最大１回だけ enqueue される。queue > Nの時は同じ頂点が複数回queueに enqueue されたということになり、ルールから逸脱していることになる。よってどのような無向で連結なグラフが指定されても，queueに必要な記憶領域が頂点数を超えない。"
       ]
     },
     {
