Colab を使用して作成されました

--- a/DataAlgo2025_R04.ipynb
+++ b/DataAlgo2025_R04.ipynb
@@ -36,9 +36,9 @@
         "\n",
         "★下記３要素を**必ず直接書き換えてから**提出すること．\n",
         "\n",
-        "* 学籍番号： 202599001\n",
-        "* 氏名： 筑波 翼\n",
-        "* Colabアカウント： tsukuba.tsubasa.dummy@gmail.com\n",
+        "* 学籍番号： 202210307\n",
+        "* 氏名： 板原豪士\n",
+        "* Colabアカウント： itahara54@gmail.com\n",
         "\n",
         "**学生同士で教えた・教わった・グループワークをした場合，必ず下記の当該行を直接書き換えて記述すること．**  \n",
         "申告があった場合は，論述などで内容が似ていたり，プログラムが似ていても減点はしない．（コピペレベルの同一文などは処罰対象）  \n",
@@ -87,7 +87,18 @@
         "id": "mRLPlzcHmhiQ"
       },
       "source": [
-        "（テキストセル1：この文字列を消してここに記述）"
+        "深さ優先探索は、ある開始頂点から順に「隣接する未訪問頂点を再帰的にたどる」ことでグラフを探索する手法である。\n",
+        "再帰呼び出しを用いる実装では、次のように動作する。\n",
+        "\n",
+        "現在の頂点uをスタック（呼び出しスタック）にプッシュし、訪問済みマークを立てる。\n",
+        "\n",
+        "1.   uの隣接リストを昇順に走査し、未訪問の頂点vを見つけたら\n",
+        "  1.   ひとまず現在のuの「残りの隣接先リスト」と「次に探索すべき頂点」を呼び出しスタックに保持し、\n",
+        "  2.   dfs(v)を再帰呼び出しする。\n",
+        "2.   dfs(v)が完了するときに、スタックから戻り元のuに復帰し、リストの続きから探索を続行する。\n",
+        "3.   すべての隣接先を探索し終えると、その時点で呼び出しスタックをポップし、親呼び出しへ戻る。\n",
+        "\n",
+        "このように「再帰呼び出しの積み重ね」が暗黙的スタックとして振る舞い、探索中の“現在の経路”を保持することで、行き止まりから正しく戻りが行われる。"
       ]
     },
     {
@@ -122,7 +133,13 @@
         "id": "3j3I4WWQ2EU0"
       },
       "source": [
-        "※説明に必要コードを貼りつけること"
+        "// dfs_recursive-short_J より該当部分\n",
+        "void dfs(int u) {\n",
+        "    visited[u] = true;\n",
+        "    for (int v : adj[u]) {\n",
+        "        if (!visited[v]) dfs(v);\n",
+        "    }\n",
+        "}\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -133,7 +150,17 @@
         "id": "B9Z8A8xin-Ru"
       },
       "source": [
-        "（議論はここに記述）"
+        "*   時間計算量\n",
+        "\n",
+        "隣接リスト表現においては、各頂点は一度だけ dfs(u) が呼ばれ、各辺は「両端の頂点から１回ずつ」調べられる。\n",
+        "\n",
+        "したがって、総辺数を E、総頂点数を V とすると O(V + E) になる。\n",
+        "\n",
+        "*   空間計算量\n",
+        "\n",
+        "再帰呼び出しの深さは、最悪で探索経路が連結成分の全頂点を訪れる直鎖（パス）になると深さ V となる。このとき呼び出しスタックは O(V) を消費する。\n",
+        "加えて、訪問管理用の配列 visited が O(V)、隣接リストそのものが O(V + E) のメモリを使う。\n",
+        "よって、DFS 全体では O(V + E) の空間（うち再帰スタックは O(V)）を要する。"
       ]
     },
     {
@@ -164,9 +191,20 @@
         "id": "rcWjNAl-2Fe7"
       },
       "source": [
-        "#ソースコード（用いるグラフファイル）"
+        "#ソースコード（用いるグラフファイル）\n",
+        "%%bash\n",
+        "cat > graph3.txt << 'EOF'\n",
+        "8 7\n",
+        "0 1\n",
+        "1 6\n",
+        "6 2\n",
+        "2 3\n",
+        "3 7\n",
+        "6 5\n",
+        "5 4\n",
+        "EOF"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -175,9 +213,75 @@
         "id": "88G_NNsW3Aud"
       },
       "source": [
-        "#ソースコード（プログラム本体）"
+        "#ソースコード（プログラム本体）\n",
+        "%%bash\n",
+        "cat > dfs_depth.c << 'EOF'\n",
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "typedef struct {\n",
+        "    int *arr;\n",
+        "    int size;\n",
+        "    int cap;\n",
+        "} List;\n",
+        "\n",
+        "static List *adj;\n",
+        "static int *visited;\n",
+        "\n",
+        "// 整列用比較関数\n",
+        "int cmp(const void *a, const void *b) {\n",
+        "    return (*(int*)a) - (*(int*)b);\n",
+        "}\n",
+        "\n",
+        "// リストの初期化\n",
+        "void init_list(List *l) {\n",
+        "    l->cap = 4;\n",
+        "    l->size = 0;\n",
+        "    l->arr = malloc(l->cap * sizeof(int));\n",
+        "}\n",
+        "\n",
+        "// 要素追加\n",
+        "void push(List *l, int v) {\n",
+        "    if (l->size == l->cap) {\n",
+        "        l->cap *= 2;\n",
+        "        l->arr = realloc(l->arr, l->cap * sizeof(int));\n",
+        "    }\n",
+        "    l->arr[l->size++] = v;\n",
+        "}\n",
+        "\n",
+        "// 再帰的 DFS\n",
+        "void dfs(int u, int depth) {\n",
+        "    visited[u] = 1;\n",
+        "    printf(\"★★列挙： %d (深さ %d)\\\\n\", u, depth);\n",
+        "    for (int i = 0; i < adj[u].size; i++) {\n",
+        "        int v = adj[u].arr[i];\n",
+        "        if (!visited[v]) dfs(v, depth + 1);\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    int N, M;\n",
+        "    if (scanf(\"%d %d\", &N, &M) != 2) return 0;\n",
+        "    adj     = malloc(N * sizeof(List));\n",
+        "    visited = calloc(N, sizeof(int));\n",
+        "    for (int i = 0; i < N; i++) init_list(&adj[i]);\n",
+        "    for (int i = 0; i < M; i++) {\n",
+        "        int u, v;\n",
+        "        scanf(\"%d %d\", &u, &v);\n",
+        "        push(&adj[u], v);\n",
+        "        push(&adj[v], u);\n",
+        "    }\n",
+        "    // 昇順探索のために各隣接リストをソート\n",
+        "    for (int i = 0; i < N; i++) {\n",
+        "        qsort(adj[i].arr, adj[i].size, sizeof(int), cmp);\n",
+        "    }\n",
+        "    // 頂点 0 から深さ 0 で探索開始\n",
+        "    dfs(0, 0);\n",
+        "    return 0;\n",
+        "}\n",
+        "EOF\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -186,21 +290,37 @@
         "id": "RMj0i7y32ik0"
       },
       "source": [
-        "#コンパイル方法"
+        "#コンパイル方法\n",
+        "%%bash\n",
+        "gcc -std=c99 dfs_depth.c -o dfs_depth"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "as4G4fX22sRC"
+        "id": "as4G4fX22sRC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bdd48bc8-af94-4461-d489-37ca2e47f33d"
       },
       "source": [
-        "#実行（出力結果をつけたまま提出すること）"
+        "#実行（出力結果をつけたまま提出すること）\n",
+        "%%bash\n",
+        "./dfs_depth < graph3.txt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "★★列挙： 0 (深さ 0)\\n★★列挙： 1 (深さ 1)\\n★★列挙： 6 (深さ 2)\\n★★列挙： 2 (深さ 3)\\n★★列挙： 3 (深さ 4)\\n★★列挙： 7 (深さ 5)\\n★★列挙： 5 (深さ 3)\\n★★列挙： 4 (深さ 4)\\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -226,7 +346,15 @@
         "id": "ljT6EzOYnUZp"
       },
       "source": [
-        "（議論はここに記述）"
+        "-  O(V) を超えない理由\n",
+        "\n",
+        "再帰呼び出しは「次にたどる頂点」と「戻り位置」を呼び出しスタックに格納するが、一度に積まれるレベルは「現在の探索経路長」に等しい。\n",
+        "どのような連結グラフでも最長の単純パス長はV−1以下なので、再帰深度（スタック消費）はO(V)に抑えられる。\n",
+        "\n",
+        "-  スタック使用量が一時的に最大になるグラフ\n",
+        "\n",
+        "最長単純パスがV頂点すべてを含む「直鎖グラフ」が最悪ケース。\n",
+        "例えば0–1–2–…–(V−1)のパスグラフを開始頂点0で探索すると、深さ0→1→2→…→V−1と逐次再帰が積まれ、一時的にスタックにV層（O(V)）が積み上がる。"
       ]
     },
     {
@@ -255,6 +383,12 @@
         "id": "uUbvRSckx_1w"
       },
       "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# これはコードとして書式設定されます\n",
+        "```\n",
+        "\n",
         "（議論はここに記述）"
       ]
     },
