Colab を使用して作成されました

--- a/DataAlgo2025_R05.ipynb
+++ b/DataAlgo2025_R05.ipynb
@@ -247,7 +247,7 @@
         "id": "q4ZmHSMKBGDd"
       },
       "source": [
-        "（議論はこの文字列を消してここに記述）"
+        "例えば1→2→3→4→1のような閉路があった場合、1に訪問済みフラグが立つ前に再起処理によって1に戻ってきてしまい、無限ループに突入し永遠に再帰から戻れなくなってしまうため。"
       ]
     },
     {
@@ -272,7 +272,7 @@
         "id": "ZpaHbvVwBJha"
       },
       "source": [
-        "（議論はこの文字列を消してここに記述）"
+        "「頂点の再訪問を禁止」し、同じ頂点を二度以上通らない（simple path）という制約を課す対策が考えられる。これにより閉路を一周するような無限ループを回避できるので、経路の長さは頂点数 -1 を上限に必ず有限となる。一方で、確実に解は得られるが計算量が予測できず、計算量が増大する。\n"
       ]
     },
     {
@@ -330,29 +330,121 @@
     {
       "cell_type": "code",
       "source": [
-        "(閉路の存在するグラフに対して最長経路が得られるC言語プログラム)"
+        "%%bash\n",
+        "# 1) Cソースコードを作成：longest_simple_path.c\n",
+        "cat > longest_simple_path.c << 'EOF'\n",
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "int N, M;\n",
+        "int **adj, *adj_size, *adj_cap;\n",
+        "int max_len = 0;\n",
+        "\n",
+        "// 深さ優先探索（単純パスのみ）で最長経路長を更新\n",
+        "void dfs(int u, int *visited, int length) {\n",
+        "    if (length > max_len) {\n",
+        "        max_len = length;\n",
+        "    }\n",
+        "    visited[u] = 1;\n",
+        "    for (int i = 0; i < adj_size[u]; i++) {\n",
+        "        int v = adj[u][i];\n",
+        "        if (!visited[v]) {\n",
+        "            dfs(v, visited, length + 1);\n",
+        "        }\n",
+        "    }\n",
+        "    visited[u] = 0;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    // 入力: 頂点数 N, 辺数 M\n",
+        "    if (scanf(\"%d %d\", &N, &M) != 2) return 0;\n",
+        "\n",
+        "    // 隣接リストの初期化\n",
+        "    adj      = malloc(N * sizeof(int*));\n",
+        "    adj_size = calloc(N, sizeof(int));\n",
+        "    adj_cap  = malloc(N * sizeof(int));\n",
+        "    for (int i = 0; i < N; i++) {\n",
+        "        adj_cap[i]  = 4;\n",
+        "        adj[i]      = malloc(adj_cap[i] * sizeof(int));\n",
+        "        adj_size[i] = 0;\n",
+        "    }\n",
+        "\n",
+        "    // 辺の読み込み (u -> v)\n",
+        "    for (int i = 0; i < M; i++) {\n",
+        "        int u, v;\n",
+        "        scanf(\"%d %d\", &u, &v);\n",
+        "        if (adj_size[u] == adj_cap[u]) {\n",
+        "            adj_cap[u] *= 2;\n",
+        "            adj[u] = realloc(adj[u], adj_cap[u] * sizeof(int));\n",
+        "        }\n",
+        "        adj[u][adj_size[u]++] = v;\n",
+        "    }\n",
+        "\n",
+        "    // 各頂点を起点に DFS を実行\n",
+        "    int *visited = calloc(N, sizeof(int));\n",
+        "    for (int i = 0; i < N; i++) {\n",
+        "        dfs(i, visited, 0);\n",
+        "    }\n",
+        "\n",
+        "    // 結果表示\n",
+        "    printf(\"Longest simple path length: %d\\n\", max_len);\n",
+        "    return 0;\n",
+        "}\n",
+        "EOF\n"
       ],
       "metadata": {
         "id": "fTgdYt_3UX9R"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "(コンパイル方法などを示す)"
+        "%%bash\n",
+        "# 2) コンパイル\n",
+        "gcc -std=c99 longest_simple_path.c -o longest_simple_path\n",
+        "\n",
+        "# 3) テスト用グラフ (閉路あり)\n",
+        "cat > graph_with_cycle.txt << 'EOF'\n",
+        "4 4\n",
+        "0 1\n",
+        "1 2\n",
+        "2 0\n",
+        "2 3\n",
+        "EOF\n",
+        "\n",
+        "echo \"=== Test: Graph with cycle ===\"\n",
+        "echo \"Vertices: 0→1→2→0 (cycle), plus 2→3\"\n",
+        "echo -n \"Result: \"\n",
+        "./longest_simple_path < graph_with_cycle.txt\n"
       ],
       "metadata": {
-        "id": "pvrTi6VVUhoz"
+        "id": "pvrTi6VVUhoz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c0f1eb6-705c-41d3-c48f-bfcefec92ef9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== Test: Graph with cycle ===\n",
+            "Vertices: 0→1→2→0 (cycle), plus 2→3\n",
+            "Result: Longest simple path length: 3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "(実行結果などを示す)"
+        "=== Test: Graph with cycle ===\n",
+        "Vertices: 0→1→2→0 (cycle), plus 2→3\n",
+        "Result: Longest simple path length: 3"
       ],
       "metadata": {
         "id": "tiTMVAQgUlQE"
@@ -363,7 +455,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "（指数時間オーダーになることに関する議論はこの文字列を消してここに記述）"
+        "最悪で全ての単純パスを列挙するため、頂点数 𝑁 に対して指数時間（およそ 𝑂(𝑁! )となる。"
       ],
       "metadata": {
         "id": "dA2gTJVqUcV_"
